--- a/src/assets/scss/_preloader.scss
+++ b/src/assets/scss/_preloader.scss
@@ -30,7 +30,7 @@
   width: 50px;
   height: 50px;
   border-radius: 100%;
-  background: #7460ef;
+  background: #fb799c;
   -webkit-animation: preloader 1.3s linear infinite;
   animation: preloader 1.3s linear infinite;
 }
@@ -45,6 +45,7 @@
     transform: scale(0, 0);
     opacity: 0.5;
   }
+
   100% {
     transform: scale(1, 1);
     opacity: 0;
@@ -56,6 +57,7 @@
     -webkit-transform: scale(0, 0);
     opacity: 0.5;
   }
+
   100% {
     -webkit-transform: scale(1, 1);
     opacity: 0;
