--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -36,3 +36,25 @@
 @import "my-account";
 @import "404";
 @import "video-popup";
+
+
+.css-m2td1u {
+    position: fixed !important;
+    width: 100% !important;
+    height: 100% !important;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #0000004a;
+    z-index: 99;
+}
+
+.css-16vsn7r {
+    left: auto !important;
+    top: auto !important;
+}
+
+.css-8z0ti4 {
+    left: auto !important;
+    top: auto !important;
+}
