Product option display in product details page

--- a/src/assets/scss/_product.scss
+++ b/src/assets/scss/_product.scss
@@ -772,7 +772,7 @@
           width: 14px;
           height: 14px;
           margin-right: 15px;
-
+          margin-top: 8px;
           cursor: pointer;
           transition: all 0.4s ease 0s;
 
