Login page has been done with api call

--- a/src/assets/scss/_login-register.scss
+++ b/src/assets/scss/_login-register.scss
@@ -5,8 +5,10 @@
     display: flex;
     justify-content: center;
     margin-bottom: 40px;
+
     .nav-item {
       position: relative;
+
       a {
         background: none;
         padding: 0;
@@ -18,10 +20,12 @@
           text-transform: capitalize;
           transition: all 0.3s ease 0s;
         }
+
         &:last-child::before {
           display: none;
         }
       }
+
       a.active h4 {
         color: $theme-color;
       }
@@ -45,28 +49,43 @@
       }
     }
   }
+
   .login-form-container {
     background: transparent none repeat scroll 0 0;
     box-shadow: 0 0 6px rgba(0, 0, 0, 0.1);
     padding: 80px;
     text-align: left;
+
     @media #{$lg-layout} {
       padding: 80px 50px;
     }
+
     @media #{$xs-layout} {
       padding: 40px 15px;
     }
+
     .login-register-form {
       form {
+        .login-input {
+          margin-bottom: 30px;
+        }
+
+        .error-msg {
+          color: red;
+          font-size: 13px;
+          font-weight: 300;
+        }
+
         input {
           background-color: transparent;
           border: 1px solid #ebebeb;
           color: #333;
           font-size: 14px;
           height: 45px;
-          margin-bottom: 30px;
+          // margin-bottom: 30px;
           padding: 0 15px;
         }
+
         input[type="checkbox"] {
           height: 15px;
           margin: 0;
@@ -74,30 +93,38 @@
           top: 1px;
           width: 17px;
         }
+
         .button-box {
           .login-toggle-btn {
             padding: 10px 0 19px;
+
             label {
               color: #242424;
               font-size: 15px;
               font-weight: 400;
+
               @media #{$xs-layout} {
                 font-size: 14px;
               }
             }
+
             a {
               color: #242424;
               float: right;
               font-size: 15px;
+
               @media #{$xs-layout} {
                 font-size: 14px;
               }
+
               transition: all 0.3s ease 0s;
+
               &:hover {
                 color: $theme-color;
               }
             }
           }
+
           button {
             background-color: #f2f2f2;
             border: medium none;
@@ -109,6 +136,7 @@
             padding: 11px 30px;
             text-transform: uppercase;
             transition: all 0.3s ease 0s;
+
             &:hover {
               background-color: $theme-color;
               color: #fff;
