--- a/src/assets/scss/_my-account.scss
+++ b/src/assets/scss/_my-account.scss
@@ -3,9 +3,11 @@
 .single-my-account {
   margin-bottom: 20px;
   border: 1px solid #ebebeb;
+
   .panel-heading {
     padding: 0;
-    & > button {
+
+    &>button {
       background: none;
       border: none;
       width: 100%;
@@ -13,9 +15,11 @@
       padding: 0;
     }
   }
+
   .card-body {
     border-bottom: 1px solid #ebebeb;
   }
+
   h3.panel-title {
     background-color: #f9f9f9;
     border-bottom: 1px solid #ebebeb;
@@ -27,6 +31,7 @@
     display: block;
     padding: 16px 55px;
     position: relative;
+
     @media #{$xs-layout} {
       line-height: 22px;
       font-size: 14px;
@@ -36,6 +41,7 @@
     &:hover {
       color: $theme-color;
     }
+
     &::before {
       color: #000;
       content: "\f107";
@@ -46,6 +52,7 @@
       right: 10px;
       top: 19px;
     }
+
     &:hover::before {
       color: $theme-color;
     }
@@ -58,31 +65,38 @@
       top: 16px;
     }
   }
+
   .myaccount-info-wrapper {
     padding: 30px 20px;
     background-color: #fff;
+
     .account-info-wrapper {
       border-bottom: 1px solid #eaeaea;
       margin-bottom: 28px;
       padding-bottom: 30px;
+
       h4 {
         font-size: 15px;
         margin: 0;
         text-transform: uppercase;
       }
+
       h5 {
         font-size: 16px;
         letter-spacing: 0.2px;
         margin-top: 7px;
       }
     }
+
     .billing-info {
       margin-bottom: 20px;
+
       label {
         color: #000;
         font-size: 14px;
         text-transform: capitalize;
       }
+
       input {
         background: transparent none repeat scroll 0 0;
         border: 1px solid #ebebeb;
@@ -90,12 +104,22 @@
         height: 40px;
         padding: 0 15px;
       }
+
+      select {
+        background: transparent none repeat scroll 0 0;
+        border: 1px solid #ebebeb;
+        color: #000;
+        height: 40px;
+        padding: 0 15px;
+      }
     }
+
     .billing-back-btn {
       display: flex;
       justify-content: flex-end;
       margin-top: 26px;
       align-items: center;
+
       .billing-back {
         a {
           color: #000;
@@ -103,15 +127,18 @@
           font-size: 14px;
           font-weight: 500;
           text-transform: uppercase;
+
           &:hover {
             color: $theme-color;
           }
+
           i {
             font-size: 16px;
             color: $theme-color;
           }
         }
       }
+
       .billing-btn {
         button {
           background-color: #f2f2f2;
@@ -125,6 +152,7 @@
           text-transform: uppercase;
           cursor: pointer;
           transition: all 0.3s ease 0s;
+
           &:hover {
             background: $theme-color;
             color: #fff;
@@ -132,15 +160,19 @@
         }
       }
     }
+
     .entries-wrapper {
       border: 1px solid #eaeaea;
       position: relative;
+
       @media #{$xs-layout} {
         padding: 30px 10px;
+
         &::before {
           display: none;
         }
       }
+
       &::before {
         position: absolute;
         content: "";
@@ -150,11 +182,14 @@
         top: 0;
         background-color: #eaeaea;
       }
+
       .entries-info {
         padding: 30px 20px;
+
         @media #{$xs-layout} {
           padding: 0 10px 30px;
         }
+
         p {
           color: #000;
           font-size: 15px;
@@ -162,7 +197,9 @@
           text-transform: capitalize;
         }
       }
+
       .entries-edit-delete {
+
         a,
         button {
           background: none;
@@ -175,11 +212,14 @@
           padding: 12px 15px;
           text-transform: uppercase;
           font-weight: 500;
+
           &:hover {
             background-color: $theme-color;
           }
+
           &.edit {
             background-color: #df5c39;
+
             &:hover {
               background-color: $theme-color;
             }
