--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -58,3 +58,9 @@
     left: auto !important;
     top: auto !important;
 }
+
+.error-msg {
+    color: red !important;
+    font-size: 13px !important;
+    font-weight: 300 !important;
+}
