--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -54,6 +54,23 @@
     top: auto !important;
 }
 
+.checkout-heading {
+    display: flex;
+    align-items: center;
+    background-color: #f6f6f6;
+    border-top: 5px solid #fb799c;
+    color: #5b5858;
+    height: 55px;
+    // width: 469px;
+    line-height: 1.6;
+    padding: 5px 30px;
+    margin-bottom: 30px;
+}
+
+.star-ratings {
+    top: -3px;
+}
+
 .css-8z0ti4 {
     left: auto !important;
     top: auto !important;
