Change password has been done

--- a/src/assets/scss/_cart.scss
+++ b/src/assets/scss/_cart.scss
@@ -7,6 +7,7 @@
     }
   }
 }
+
 h3.cart-page-title {
   font-size: 20px;
   font-weight: 500;
@@ -17,9 +18,11 @@ h3.cart-page-title {
 .cart-table-content {
   table {
     border: 1px solid #ebebeb;
-    thead > tr {
+
+    thead>tr {
       border: 1px solid #ebebeb;
       background-color: #f9f9f9;
+
       th {
         font-size: 14px;
         font-weight: 500;
@@ -33,39 +36,49 @@ h3.cart-page-title {
 
         color: #333;
         border-top: medium none;
+
         @media #{$lg-layout} {
           padding: 21px 35px 22px;
         }
+
         @media #{$xs-layout} {
           padding: 21px 20px 22px;
         }
       }
     }
-    tbody > tr {
+
+    tbody>tr {
       border-bottom: 1px solid #ebebeb;
+
       td.product-thumbnail {
         width: 150px;
       }
+
       td.product-name {
         width: 435px;
 
         text-align: left;
+
         a {
           font-size: 15px;
           font-weight: 500;
 
           color: #333;
+
           &:hover {
             color: $theme-color;
           }
         }
       }
+
       td.product-price-cart {
         width: 435px;
+
         span {
           font-weight: 500;
 
           color: #333;
+
           &.old {
             margin-right: 10px;
 
@@ -75,13 +88,16 @@ h3.cart-page-title {
           }
         }
       }
+
       td.product-subtotal {
         font-weight: 500;
 
         color: #333;
       }
+
       td.product-quantity {
         width: 435px;
+
         .cart-plus-minus {
           position: relative;
 
@@ -90,6 +106,7 @@ h3.cart-page-title {
           width: 110px;
           height: 40px;
           padding: 0;
+
           .qtybutton {
             font-size: 16px;
 
@@ -108,6 +125,7 @@ h3.cart-page-title {
             border: none;
             background: none;
           }
+
           .dec.qtybutton {
             top: 0;
             left: 0;
@@ -116,6 +134,7 @@ h3.cart-page-title {
 
             border-right: 1px solid #e5e5e5;
           }
+
           .inc.qtybutton {
             top: 0;
             right: 0;
@@ -124,6 +143,7 @@ h3.cart-page-title {
 
             border-left: 1px solid #e5e5e5;
           }
+
           input.cart-plus-minus-box {
             font-size: 14px;
 
@@ -142,8 +162,10 @@ h3.cart-page-title {
           }
         }
       }
+
       td.product-remove {
         width: 100px;
+
         a,
         button {
           font-size: 17px;
@@ -153,13 +175,15 @@ h3.cart-page-title {
           color: #666;
           border: none;
           background: none;
+
           &:hover {
             color: $theme-color;
           }
         }
       }
-      td.product-wishlist-cart > a,
-      td.product-wishlist-cart > button {
+
+      td.product-wishlist-cart>a,
+      td.product-wishlist-cart>button {
         font-size: 13px;
         font-weight: 500;
         line-height: 1.2;
@@ -176,14 +200,17 @@ h3.cart-page-title {
         border-radius: 50px;
         background: none;
         background-color: $theme-color;
+
         &:hover,
         &.active {
           background-color: #333;
         }
+
         &:disabled {
           cursor: not-allowed;
         }
       }
+
       td {
         font-size: 15px;
 
@@ -202,14 +229,16 @@ h3.cart-page-title {
   justify-content: space-between;
 
   padding: 30px 0 55px;
+
   @media #{$xs-layout} {
     display: block;
 
     padding: 30px 0 15px;
   }
-  .cart-shiping-update > a,
-  .cart-clear > button,
-  .cart-clear > a {
+
+  .cart-shiping-update>a,
+  .cart-clear>button,
+  .cart-clear>a {
     font-size: 14px;
     font-weight: 500;
     line-height: 1;
@@ -223,30 +252,36 @@ h3.cart-page-title {
     color: #363f4d;
     border-radius: 50px;
     background-color: #f2f2f2;
+
     @media #{$md-layout} {
       font-size: 13px;
 
       padding: 18px 25px 17px;
     }
+
     @media #{$xs-layout} {
       margin: 0 0 15px;
       padding: 18px 40px 17px;
     }
+
     &:hover {
       color: #fff;
       background-color: $theme-color;
     }
   }
-  .cart-clear > button {
+
+  .cart-clear>button {
     margin-right: 27px;
 
     cursor: pointer;
     transition: all 0.3s ease 0s;
 
     border: medium none;
+
     &:last-child {
       margin-right: 0;
     }
+
     @media #{$md-layout} {
       margin-right: 15px;
     }
@@ -260,14 +295,18 @@ h3.cart-page-title {
   border: 1px solid #ebebeb;
   border-radius: 5px;
   background-color: #f9f9f9;
+
   @media #{$lg-layout} {
     padding: 45px 18px 50px;
   }
+
   @media #{$xs-layout} {
     padding: 45px 18px 50px;
   }
+
   .title-wrap {
     position: relative;
+
     &::before {
       position: absolute;
       z-index: 1;
@@ -282,6 +321,7 @@ h3.cart-page-title {
 
       background-color: #e3e1e1;
     }
+
     h4.cart-bottom-title {
       font-size: 18px;
       font-weight: 500;
@@ -290,10 +330,12 @@ h3.cart-page-title {
 
       margin: 0;
       padding-right: 18px;
+
       @media #{$lg-layout} {
         font-size: 16px;
       }
     }
+
     .section-bg-gray {
       position: relative;
       z-index: 99;
@@ -301,15 +343,20 @@ h3.cart-page-title {
       background-color: #f8f9f9;
     }
   }
+
   .tax-wrapper {
     margin-top: 22px;
+
     p {
       margin: 0;
     }
+
     .tax-select-wrapper {
       margin: 5px 0 0;
+
       .tax-select {
         margin: 0 0 26px;
+
         label {
           font-size: 14px;
 
@@ -317,9 +364,10 @@ h3.cart-page-title {
 
           color: #242424;
         }
+
         select {
           font-size: 12px;
-
+          background: #fff none repeat scroll 0 0;
           width: 100%;
           height: 40px;
           padding: 0 50px 0 15px;
@@ -327,13 +375,14 @@ h3.cart-page-title {
           cursor: pointer;
 
           color: #242424;
-//background: #fff url("../../assets/img/icon-img/cart.png") no-repeat scroll right 18px center;
+          //background: #fff url("../../assets/img/icon-img/cart.png") no-repeat scroll right 18px center;
           border: 1px solid #ebebeb;
           box-shadow: none;
 
           -webkit-appearance: none;
-             -moz-appearance: none;
+          -moz-appearance: none;
         }
+
         input {
           height: 40px;
 
@@ -341,6 +390,7 @@ h3.cart-page-title {
           background: #fff none repeat scroll 0 0;
         }
       }
+
       button.cart-btn-2 {
         font-size: 14px;
         font-weight: 500;
@@ -355,17 +405,21 @@ h3.cart-page-title {
         border: medium none;
         border-radius: 50px;
         background-color: $theme-color;
+
         &:hover {
           background-color: #333;
         }
       }
     }
   }
+
   .discount-code {
     margin: 21px 0 0;
+
     p {
       margin: 0 0 15px;
     }
+
     form {
       input {
         height: 40px;
@@ -375,6 +429,7 @@ h3.cart-page-title {
         border: 1px solid #ebebeb;
         background: #fff;
       }
+
       button.cart-btn-2 {
         font-size: 14px;
         font-weight: 500;
@@ -389,6 +444,7 @@ h3.cart-page-title {
         border: medium none;
         border-radius: 50px;
         background-color: $theme-color;
+
         &:hover {
           background-color: #333;
         }
@@ -403,14 +459,18 @@ h3.cart-page-title {
   border: 1px solid #ebebeb;
   border-radius: 5px;
   background-color: #f9f9f9;
+
   @media #{$lg-layout} {
     padding: 45px 18px 50px;
   }
+
   @media #{$md-layout} {
     margin-top: 30px;
   }
+
   .title-wrap {
     position: relative;
+
     &::before {
       position: absolute;
       z-index: 1;
@@ -425,6 +485,7 @@ h3.cart-page-title {
 
       background-color: #e3e1e1;
     }
+
     h4.cart-bottom-title {
       font-size: 18px;
       font-weight: 500;
@@ -434,6 +495,7 @@ h3.cart-page-title {
       margin: 0;
       padding-right: 18px;
     }
+
     .section-bg-gary-cart {
       position: relative;
       z-index: 9;
@@ -441,10 +503,12 @@ h3.cart-page-title {
       background-color: #f9f9f9;
     }
   }
+
   h5 {
     font-size: 14px;
 
     margin: 36px 0 27px;
+
     span {
       font-size: 18px;
       font-weight: 500;
@@ -452,28 +516,34 @@ h3.cart-page-title {
       float: right;
     }
   }
+
   .total-shipping {
     margin: 0 0 27px;
     padding: 28px 0;
 
     border-top: 1px solid #ebebeb;
     border-bottom: 1px solid #ebebeb;
+
     h5 {
       font-size: 14px;
 
       margin: 0;
     }
+
     ul {
       padding: 19px 0 0 0;
+
       li {
         margin: 0 0 6px;
 
         list-style: outside none none;
 
         color: #242424;
+
         &:last-child {
           margin: 0 0 0;
         }
+
         input {
           position: relative;
           top: 2px;
@@ -490,12 +560,14 @@ h3.cart-page-title {
           border-radius: 5px !important;
           background: #e9e9e9 none repeat scroll 0 0;
         }
+
         span {
           float: right;
         }
       }
     }
   }
+
   h4.grand-totall-title {
     font-size: 20px;
     font-weight: 500;
@@ -503,10 +575,12 @@ h3.cart-page-title {
     margin: 0 0 25px;
 
     color: $theme-color;
+
     span {
       float: right;
     }
   }
+
   a {
     font-size: 14px;
     font-weight: 500;
@@ -522,6 +596,7 @@ h3.cart-page-title {
     color: #fff;
     border-radius: 50px;
     background-color: $theme-color;
+
     &:hover {
       background-color: #333;
     }
@@ -536,6 +611,7 @@ h3.cart-page-title {
 
 .cart-item-variation {
   margin-top: 10px;
+
   span {
     display: block;
   }
