--- a/src/assets/scss/_checkout.scss
+++ b/src/assets/scss/_checkout.scss
@@ -1,4 +1,34 @@
 /*------- 21. Checkout page  -----------*/
+.shippingRow {
+  display: flex;
+  align-items: center;
+
+  ul {
+    display: block !important;
+    width: 40%;
+
+    &:nth-child(2) {
+      width: 60%;
+
+      li {
+        margin-bottom: 40px;
+
+        &:last-child {
+          margin-bottom: 0px;
+        }
+
+        .login-toggle-btn {
+          display: flex;
+          align-items: center;
+
+          label {
+            margin-bottom: 0px
+          }
+        }
+      }
+    }
+  }
+}
 
 .billing-info-wrap {
   h3 {
@@ -15,6 +45,8 @@
     font-size: 13px;
     font-weight: 300;
   }
+
+
 
   input[type="checkbox"] {
     height: 15px;
