env and few fixes

--- a/src/assets/scss/_footer.scss
+++ b/src/assets/scss/_footer.scss
@@ -2,7 +2,7 @@
 
 .copyright {
   .footer-logo {
-    margin-top: 41px;
+    margin-top: 0px;
     margin-bottom: 12px;
 
     img {
@@ -24,7 +24,7 @@
 
   p {
     letter-spacing: 0.9px;
-
+    font-size: 10px;
     color: #313131;
 
     a {
