1) Search functionality has been completed 2) https://trello.com/c/vrSqSV1J - Done 3) https://trello.com/c/dw4Klyte - Done

--- a/src/assets/scss/_header.scss
+++ b/src/assets/scss/_header.scss
@@ -517,7 +517,16 @@
 
 
 
+.autoComplete {
+  margin-top: 20px;
+  border-top: 1px dotted grey;
 
+  p {
+    font-size: 13px;
+    line-height: 40px;
+    border-bottom: 1px dotted grey;
+  }
+}
 
 .header-right-wrap {
   display: flex;
