--- a/src/assets/scss/_header.scss
+++ b/src/assets/scss/_header.scss
@@ -535,11 +535,11 @@
   margin-top: 32px;
 
   @media #{$md-layout} {
-    margin-top: 0;
+    margin-top: 17px;
   }
 
   @media #{$xs-layout} {
-    margin-top: 2px;
+    margin-top: 17px;
   }
 
   .same-style {
@@ -573,6 +573,14 @@
 
     &:first-child {
       margin-left: 0;
+
+      @media #{$md-layout} {
+        margin-right: -13px;
+      }
+
+      @media #{$xs-layout} {
+        margin-right: -7px;
+      }
     }
 
     &:hover>a,
