1) search box can be removed on category - Done 2) When customer is logued in - Done 3) French / English / ... translations should be able to translate the language label in drop down - Done

--- a/src/assets/scss/_cart.scss
+++ b/src/assets/scss/_cart.scss
@@ -328,6 +328,14 @@ h3.cart-page-title {
   }
 }
 
+.cart-total {
+  .box-custom {
+    display: flex;
+    justify-content: space-between;
+  }
+
+}
+
 .cart-tax,
 .discount-code-wrapper {
   padding: 45px 30px 50px;
@@ -335,6 +343,11 @@ h3.cart-page-title {
   border: 1px solid #ebebeb;
   border-radius: 5px;
   background-color: #f9f9f9;
+
+  &.coupon-code {
+    width: 48%;
+  }
+
 
   @media #{$lg-layout} {
     padding: 45px 18px 50px;
@@ -493,12 +506,16 @@ h3.cart-page-title {
   }
 }
 
+
 .grand-totall {
   padding: 45px 30px 50px;
-
   border: 1px solid #ebebeb;
   border-radius: 5px;
   background-color: #f9f9f9;
+
+  &.cart-total-box {
+    width: 48%;
+  }
 
   @media #{$lg-layout} {
     padding: 45px 18px 50px;
